--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,15 @@
   <div class="boutique">
 
     <div class="container">
-      <div class="row">
-        <div class="col">
+      <div class="row justify-content-md-center">
+        <div class="col-3">
           <h5>Filtres</h5>
+
+          <div>
+            <p>Par nom</p>
+            <input type="text" [(ngModel)]="filterSearchbarValue" (ngModelChange)="displayProducts()">
+          </div>
+
 
           <div>
             <p>Par catégorie</p>
