--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,5 +15,12 @@ div.main{
         h5{
             text-align: center;
         }
+
+        div.div_products{
+
+            div.around_products_card{
+                padding: 0.75em;
+            }
+        }
     }
 }
