--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 
           <div>
             <p>Par nom</p>
-            <input type="text" [(ngModel)]="filterSearchbarValue" (ngModelChange)="displayProducts()">
+            <input type="text" [(ngModel)]="filter_searchbar_value" (ngModelChange)="displayProducts()">
           </div>
 
 
