--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,10 +38,10 @@
           <div class="row">
             <div class="col-4 around_products_card" *ngFor="let product of tab_products_displayed">
               <div class="card">
-                <img class="card-img-top" [src]="product.image">
+                <img class="card-img-top product_image" [src]="product.image">
                 <div class="card-body">
                   <h5 class="card-title">{{ product.name }}</h5>
-                  <p class="card-text">{{ product.price }} €</p>
+                  <p class="card-text product_price">{{ product.price }} €</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
