--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,7 +42,9 @@
                 <div class="card-body">
                   <h5 class="card-title">{{ product.name }}</h5>
                   <p class="card-text product_price">{{ product.price }} €</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <div class="div_add_to_cart">
+                    <button type="button" class="btn btn-primary">Ajouter au panier</button>
+                  </div>
                 </div>
               </div>
             </div>
