--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,14 @@
 
 <div class="main">
   <div class="header">
-    <p>Cash Register</p>
+    <div class="row">
+      <div class="col-2"></div>
+      <div class="col-8"><span class="title">Cash Register</span></div>
+      <div class="col-2"><mat-icon aria-hidden="false" aria-label="Cart" fontIcon="shopping_cart"></mat-icon></div>
+    </div>
   </div>
+
+
 
   <div class="boutique">
 
