--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,8 +4,27 @@ div.main{
 
     div.header{
     
-        display: flex;
-        justify-content: center;
+        div.row{
+            text-align: center;
+            width: 100%;
+            margin: 0;
+            padding: 2em;
+
+            div{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                span.title{
+                    font-size: 2em;
+                }
+
+                mat-icon{
+                    transform: scale(1.3);
+                    cursor: pointer;
+                }
+            }
+        }
     }
     
     
