--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,15 @@
     <div class="row">
       <div class="col-2"></div>
       <div class="col-8"><span class="title">Cash Register</span></div>
-      <div class="col-2"><mat-icon aria-hidden="false" aria-label="Cart" fontIcon="shopping_cart"></mat-icon></div>
+      <div class="col-2">
+        <div class="cart_icon">
+          <mat-icon aria-hidden="false" aria-label="Cart" fontIcon="shopping_cart"></mat-icon>
+
+          <div class="cart">
+            <app-panier></app-panier>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
