--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,9 +19,29 @@ div.main{
                     font-size: 2em;
                 }
 
-                mat-icon{
-                    transform: scale(1.3);
-                    cursor: pointer;
+                div.cart_icon{
+                    position: relative;
+
+                    mat-icon{
+                        transform: scale(1.3);
+                        cursor: pointer;
+                    }
+
+                    div.cart{
+                        visibility:hidden;
+                        opacity:0;
+                        transition:visibility 0.5s linear, opacity 0.5s linear;
+                        position: absolute;
+                        top: 2em;
+                        border: 1px solid black;
+                        background: white;
+                    }
+                }
+
+                div.cart_icon:hover div.cart{
+                    visibility:visible;
+                    opacity:1;
+                    transition:visibility 0s linear, opacity 0s linear;
                 }
             }
         }
