--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,3 +69,17 @@
 
   </div>
 </div>
+
+<ngb-toast
+*ngFor="let toast of _toastsService.toasts"
+[class]="toast.classname"
+[autohide]="true"
+[delay]="toast.delay || 5000"
+(hidden)="_toastsService.remove(toast)"
+>
+<ng-template [ngIf]="isTemplate(toast)" [ngIfElse]="text">
+  <ng-template [ngTemplateOutlet]="toast.textOrTpl"></ng-template>
+</ng-template>
+
+<ng-template #text>{{ toast.textOrTpl }}</ng-template>
+</ngb-toast>
