--- a/src/app/components/panier/panier.component.html
+++ b/src/app/components/panier/panier.component.html
@@ -19,5 +19,9 @@
                 </div>
             </li>
           </ul>
+
+          <div class="btn_valid_cart">
+            <button type="button" class="btn btn-primary" (click)="validateCart()">Payer</button>
+          </div>
     </div>
 </div>
