--- a/src/app/components/panier/panier.component.html
+++ b/src/app/components/panier/panier.component.html
@@ -13,9 +13,8 @@
                 <div>
                     <span class="product_name">{{ article.product.name }} </span> <span class="product_quantity"> x{{ article.quantite }}</span>
                 </div>
-                <div class="separator">|</div>
-                <div>
-                    {{ article.product.price * article.quantite }} €
+                <div class="product_price">
+                    {{ article.product.price * article.quantite }}&nbsp;€
                 </div>
             </li>
           </ul>
