--- a/src/app/components/panier/panier.component.scss
+++ b/src/app/components/panier/panier.component.scss
@@ -19,8 +19,10 @@ div.cart{
                 font-size: 0.9em;
             }
 
-            div.separator{
-                padding: 0 0.5em;
+            div.product_price{
+                border-left: 1px solid black;
+                margin-left: 1em;
+                padding-left: 1em;
             }
         }
     }
