--- a/src/app/components/panier/panier.component.html
+++ b/src/app/components/panier/panier.component.html
@@ -14,7 +14,16 @@
                     <span class="product_name">{{ article.product.name }} </span> <span class="product_quantity"> x{{ article.quantite }}</span>
                 </div>
                 <div class="product_price">
-                    {{ article.product.price * article.quantite }}&nbsp;€
+                    {{ (article.product.price * article.quantite) | currency: 'EUR':'symbol':undefined:'fr-FR' }}
+                </div>
+            </li>
+
+            <li class="list-group-item">
+                <div>
+                    Article(s) : {{ this._paniersService.panier.length }}
+                </div>
+                <div>
+                    Total : 30 €
                 </div>
             </li>
           </ul>
