--- a/src/app/components/panier/panier.component.html
+++ b/src/app/components/panier/panier.component.html
@@ -18,11 +18,11 @@
                 </div>
             </li>
 
-            <li class="list-group-item">
+            <li class="list-group-item cart_total">
                 <div>
                     Article(s) : {{ this._paniersService.panier.length }}
                 </div>
-                <div>
+                <div class="price_total">
                     Total : 30 €
                 </div>
             </li>
