--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,14 +26,14 @@
         <div class="div_filters col-3">
           <h5>Filtres</h5>
 
-          <div>
-            <p>Par nom</p>
-            <input type="text" [(ngModel)]="filter_searchbar_value" (ngModelChange)="displayProducts()">
+          <div class="div_filter_nom">
+            <p>Par nom :</p>
+            <input class="filter_searchbar" type="text" [(ngModel)]="filter_searchbar_value" (ngModelChange)="displayProducts()">
           </div>
 
 
-          <div>
-            <p>Par catégorie</p>
+          <div class="div_filter_categories">
+            <p>Par catégorie :</p>
             <div class="form-check" *ngFor="let categorie of tab_categories; let i=index;">
               <input class="form-check-input" type="checkbox" value="" id="categorie_{{i}}" (change)="filterCategories(categorie)">
               <label class="form-check-label" for="categorie_{{i}}">
