--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,7 +55,7 @@
                 <img class="card-img-top product_image" [src]="product.image">
                 <div class="card-body">
                   <h5 class="card-title">{{ product.name }}</h5>
-                  <p class="card-text product_price">{{ product.price }} €</p>
+                  <p class="card-text product_price">{{ product.price | currency: 'EUR':'symbol':undefined:'fr-FR' }}</p>
                   <div class="div_add_to_cart">
                     <button type="button" class="btn btn-outline-primary" (click)="addToCart(product)">Ajouter au panier</button>
                   </div>
