--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,8 @@
 div.main{
 
     div.header{
+        background-color: rgba(255,255,255,0.5);
+        box-shadow: 0px 5px 5px #848484;
     
         div.row{
             text-align: center;
@@ -39,7 +41,7 @@ div.main{
                         background: white;
                         min-width: 17em;
                         max-width: 20em;
-                        z-index: 1;
+                        z-index: 3;
                     }
                 }
 
